# OpsScribe

./: .gitignore  README.md  agents.py  csv_parser.py  document_writer.py  docx_writer.py  json_parser.py  pyproject.toml  report_models.py  report_runner.py
report_specs/: ops_manager_q2.yaml
scripts/: analyze_cases_agent.py  generate_graphs.py  parse_csv.py  parse_json.py  run_report.py  stress_test_csv_parser.py  write_report_docx.py
