[project]
name = "opsscribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "pandas>=2.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "reportlab>=4.5.1",
]

[tool.uv]
package = false
